2009-04-06 22:26  rsbivand

	* R/xml1.R, R/zzz.R, man/readRAST6.Rd: QGIS/cygwin cleanup

2009-04-06 20:21  rsbivand

	* R/zzz.R: bat check fix

2009-04-06 19:45  rsbivand

	* R/xml1.R: bat check fix

2009-04-06 19:41  rsbivand

	* R/xml1.R: bat check fix

2009-04-06 19:40  rsbivand

	* R/zzz.R: Windows Native cleanup

2009-04-06 19:10  rsbivand

	* R/: xml1.R: bat check fix

2009-04-06 19:03  rsbivand

	* R/: xml1.R, zzz.R: bat check fix

2009-04-06 18:37  rsbivand

	* R/: initGRASS.R, spgrass6.R, xml1.R, zzz.R: bat check fix

2009-04-06 11:17  rsbivand

	* ChangeLog, R/xml1.R, inst/ChangeLog: bat check fix

2009-04-05 21:41  rsbivand

	* DESCRIPTION, R/xml1.R, man/readRAST6.Rd: Windows Native cleanup

2009-04-03 21:30  rsbivand

	* R/xml1.R, man/readRAST6.Rd: Windows Native cleanup

2009-04-03 13:35  rsbivand

	* R/bin_link.R, R/vect_link.R, man/readRAST6.Rd, man/readVECT6.Rd,
	  man/spgrass6.Rd: implementing via execGRASS phase 2

2009-04-02 22:26  rsbivand

	* DESCRIPTION, R/spgrass6.R, R/vect_link.R: execGRASS conversion
	  phase 1

2009-04-02 11:09  rsbivand

	* ChangeLog, DESCRIPTION, inst/ChangeLog: tidy

2009-04-02 11:04  rsbivand

	* DESCRIPTION, R/AAA.R, R/initGRASS.R, R/spgrass6.R, R/zzz.R:
	  checking Windows initGRASS

2009-04-01 21:47  rsbivand

	* DESCRIPTION, R/AAA.R, R/initGRASS.R, R/spgrass6.R, R/xml1.R,
	  R/zzz.R, man/execGRASS.Rd, man/initGRASS.Rd, ChangeLog,
	  inst/ChangeLog: adding initGRASS and execGRASS functionality

2009-03-13 15:42  rsbivand

	* R/vect_link.R: readVECT6 NA cat values

2009-03-13 08:54  rsbivand

	* R/bin_link.R, inst/CITATION, ChangeLog, DESCRIPTION,
	  inst/ChangeLog: readRAST6 checks

2009-02-05 19:38  rsbivand

	* inst/CITATION: tidy

2009-02-05 19:35  rsbivand

	* DESCRIPTION, inst/CITATION, ChangeLog: tidy

2009-01-11 21:47  rsbivand

	* DESCRIPTION, inst/ChangeLog, ChangeLog: tidying readRAST6
	  messages

2009-01-11 20:41  rsbivand

	* R/bin_link.R, ChangeLog: tidying readRAST6 messages
